src/containers/Header/style.scss
.navBarOpen {
  position: fixed;
  height: 100vh;
  top: 0px;
  left: 0px;
  padding: 10px;
  background: white;
  width: 60vw;
  z-index: 1;
  -webkit-transition: left 0.5s;
}
.navBarClose {
  position: fixed;
  height: 100vh;
  top: 0px;
  left: -240px;
  padding: 10px;
  background: white;
  width: 60vw;
  -webkit-transition: left 0.5s;
  z-index: 1;
}

.backDrop {
  background-color: rgba(0,0,0,0.4);
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 0;
}

.headerLogo {
  width: 100%;
  height: 50px;
  object-fit: contain;
}

.togglerClass {
  padding: 15px;
  margin: 8px 0px;
}

.logo {
  width: 80%;
  height: 100px;
  object-fit: contain;
  margin-bottom: 50px;
}

.headerNavItem {
  border-bottom: 1px solid #ddd;
  padding: 5px;
}

.headerParent {
  padding: 10px;
  background: #fafafa;
  width: 100%;
  border-bottom: 1px solid #ddd;
}

